--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ button:focus{
 
 img{
     transition: all .3s;
+    size
 }
 
 .clearfix::after{
@@ -34,13 +35,23 @@ img{
 .header-box{
     width: 100%;
     height: 7rem; 
-    background-color: #b83030;
+    background-image: url(https://t3.ftcdn.net/jpg/01/72/84/36/240_F_172843652_jJwPj7nM6VIotV8dcmN5iWCoxnQYPeuy.jpg);
+    background-size: repeat;
 }
 
 .header{
     padding: 1.5rem;
     font-weight: 600;
-    font-size: 2.5rem;
+    font-size: 5rem;
+    color: #000000;
+    text-align: center;
+    margin-bottom: 2rem;
+}
+.header-name{
+    padding: 1.5rem;
+    font-weight: 600;
+    font-size: 3rem;
+    color: #d2d2d2;
     text-align: center;
     margin-bottom: 2rem;
 }
@@ -48,27 +59,25 @@ img{
     height: 400px;
     width: 250px;
 }
+
 .main{
     text-align: center;
 }
 
-.btn-new{
+.btn-newgame{
     text-align: center;
 }
 
-.btn-new{
-    position: absolute;
+.btn-newgame{
     top: 18%;
     left: 12%;
     background: none;
     border: none;
-    color:  #d2d2d2; 
-    font-size: 1.2rem;
-    font-weight: 100;
+    font-weight: bold;
     cursor: pointer;
     transition: all .2s;
 }
-.btn-new i{
+.btn-newgame i{
     margin-right: 15px;
 }
 
@@ -79,13 +88,13 @@ img{
     justify-content: space-between;
     flex-direction: row;
 }
-.name, .score-0, .score-1{
+.players, .playerscore, .computerscore{
     width: 50%;
     font-size: 1.5rem;
     border: 1px solid #78a58d;
 }
 
-.score-0, .score-1{
+.playerscore, .computerscore{
     font-size: 4rem;
     font-weight: 700;
     color: #E45A47;
@@ -149,8 +158,10 @@ img{
     visibility: hidden;
     text-transform: uppercase;
     margin-top: 2rem;
-    font-size: 2.5rem;
+    font-size: 7rem;
+    font-weight: bolder;
     letter-spacing: 2px;
-    color: #78a58d;
+    color: #ff0000;
 }
+
 
